[build-system]
requires = [
  "setuptools>=61.0",  
  "huggingface-hub>=0.14.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "auditnlg"
version = "0.0.1"
authors = [
  { name="Jason Wu", email="wu.jason@salesforce.com" },
  { name="Lidiya Murakhovs'ka", email="l.murakhovska@salesforce.com" },
  { name="Prafulla Kumar Choubey", email="pchoubey@salesforce.com" },
  { name="Alex Fabbri", email="afabbri@salesforce.com" },
  { name="Divyansh Agarwal", email="divyansh.agarwal@salesforce.com" },
  { name="Congying Xia", email="c.xia@salesforce.com" },
  { name="Tian Xie", email="txie@salesforce.com" },
]
dependencies = [
  "huggingface-hub==0.14.1",
  "transformers==4.28.1",
  "openai==0.27.6",
  "google-api-python-client==1.12.8",
  "torch==2.0.0",
  "detoxify",
  "sentencepiece==0.1.99",
  "langchain==0.0.158", 
  "nltk==3.8.1", 
  "parlai==1.7.1", 
  "rank_bm25", 
  "gdown==4.7.1", 
  "summac", 
  "edlib",
  "spacy==3.5.2",
  "accelerate==0.19.0"
]
description = "Auditing Generative AI Lanugage Modeling for Trustworthiness"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/salesforce/AuditNLG"
