[build-system]
requires = [
  "setuptools>=61.0",  
  "huggingface-hub>=0.14.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "auditnlg"
version = "0.0.1"
authors = [
  { name="Jason Wu", email="wu.jason@salesforce.com" },
  { name="Lidiya Murakhovs'ka", email="l.murakhovska@salesforce.com" },
  { name="Prafulla Kumar Choubey", email="pchoubey@salesforce.com" },
  { name="Alex Fabbri", email="afabbri@salesforce.com" },
  { name="Divyansh Agarwal", email="divyansh.agarwal@salesforce.com" },
  { name="Congying Xia", email="c.xia@salesforce.com" },
  { name="Tian Xie", email="txie@salesforce.com" },
]
dependencies = [
  "huggingface-hub>=0.14.1",
  "transformers",
  "openai",
  "google-api-python-client>=1.12.8",
  "torch",
  "detoxify",
  "sentencepiece",
  "langchain", 
  "nltk", 
  "parlai", 
  "rank_bm25", 
  "gdown",  
  "edlib",
  "spacy",
  "accelerate"
]
description = "Auditing Generative AI Lanugage Modeling for Trustworthiness"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/salesforce/AuditNLG"
